<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/detail_gradient">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivProfile"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentTop="true"
        app:civ_border_color="@color/White"
        app:civ_border_width="2dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ava" />
    <LinearLayout
        android:id="@+id/profile_data"
        android:layout_below="@+id/ivProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@id/ivProfile"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/author_name"
        android:textColor="@color/black"
        android:textSize="22sp"

        android:textStyle="bold" />
        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivProfile"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/author_email"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="italic" />
        <TextView
            android:id="@+id/desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivProfile"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/author_desc"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textStyle="italic" />
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivProfile"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:padding="5dp"
            android:background="#0E0E0E"
            android:gravity="center"
            android:text="@string/author_follow"
            android:textSize="18sp"
            android:textColor="@color/White"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_below="@+id/profile_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="5dp">
        <ImageView
            android:id="@+id/facebook"
            android:layout_margin="15dp"
            android:layout_width="50dp"
            android:layout_height="50dp"

            app:srcCompat="@drawable/fb">
        </ImageView>
        <ImageView
            android:id="@+id/instagram"
            android:layout_width="60dp"
            android:layout_height="80dp"
            android:layout_margin="15dp"
            app:srcCompat="@drawable/ig">
        </ImageView>
        <ImageView
            android:id="@+id/linkedin"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="15dp"
            app:srcCompat="@drawable/link">
        </ImageView>
    </LinearLayout>


</RelativeLayout>